--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ compileTestKotlin {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'firststep.DataAnalyzerKt'
+        attributes 'Main-Class': 'analyzer.DataAnalyzerKt'
     }
 
     // This line of code recursively collects and copies all of a project's files
